Fixed bug create_all_single_mutants

--- a/design_app/Tranception_Design.ipynb
+++ b/design_app/Tranception_Design.ipynb
@@ -53,7 +53,7 @@
         "      if current_AA!=mutated_AA:\n",
         "        mutated_sequence = sequence_list.copy()\n",
         "        mutated_sequence[position] = mutated_AA\n",
-        "        all_single_mutants[current_AA+str(position+1)+mutated_AA]=\"\".join(mutated_sequence)\n",
+        "        all_single_mutants[current_AA+str(mutation_range_start+position)+mutated_AA]=\"\".join(mutated_sequence)\n",
         "  all_single_mutants = pd.DataFrame.from_dict(all_single_mutants,columns=['mutated_sequence'],orient='index')\n",
         "  all_single_mutants.reset_index(inplace=True)\n",
         "  all_single_mutants.columns = ['mutant','mutated_sequence']\n",
@@ -182,6 +182,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XxoLMOwD0E_b"
+      },
+      "outputs": [],
       "source": [
         "tranception_design = gr.Blocks()\n",
         "\n",
@@ -277,19 +282,14 @@
         "    gr.Markdown(\"Links: <a href='https://proceedings.mlr.press/v162/notin22a.html' target='_blank'>Paper</a>  <a href='https://github.com/OATML-Markslab/Tranception' target='_blank'>Code</a>  <a href='https://sites.google.com/view/proteingym/substitutions' target='_blank'>ProteinGym</a>\")\n",
         "\n",
         "tranception_design.launch(debug=True,share=True)"
-      ],
-      "metadata": {
-        "id": "XxoLMOwD0E_b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
